[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Bodies/tankBody_green_outline.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Barrels/specialBarrel1_outline.png" type="Texture" id=3]
[ext_resource path="res://Turret.gd" type="Script" id=4]
[ext_resource path="res://Base.gd" type="Script" id=5]
[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Effects/shotLarge.png" type="Texture" id=6]
[ext_resource path="res://Machine_Gun.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/tower-defense-top-down/PNG/Default size/towerDefense_tile229.png" type="Texture" id=8]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 20 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_mask = 45
script = ExtResource( 2 )

[node name="GreenCollision2" type="CollisionShape2D" parent="." groups=["playerCollisions"]]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="GreenCollision" type="CollisionShape2D" parent="Area2D" groups=["playerCollisions"]]
shape = SubResource( 1 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Turret" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, 4.4 )
script = ExtResource( 4 )

[node name="Shot_Cooldown" type="Timer" parent="Turret"]
wait_time = 1.5
one_shot = true

[node name="Tween" type="Tween" parent="Turret"]

[node name="Entry" type="Sprite" parent="Turret"]
visible = false
texture = ExtResource( 6 )

[node name="Shot_Effect_Cooldown" type="Timer" parent="Turret"]
wait_time = 0.1
one_shot = true

[node name="Barrel_Base" parent="Turret" instance=ExtResource( 7 )]
visible = false
scale = Vector2( 0.6, 0.6 )

[node name="Empty_Missile_Pad" type="Sprite" parent="Turret"]
visible = false
texture = ExtResource( 8 )

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = 24.0
margin_top = -48.0
margin_right = 24.0
margin_bottom = -48.0

[connection signal="texture_changed" from="Turret" to="Turret" method="_on_Turret_texture_changed"]
[connection signal="timeout" from="Turret/Shot_Cooldown" to="Turret" method="_on_Shot_Cooldown_timeout"]
[connection signal="timeout" from="Turret/Shot_Effect_Cooldown" to="Turret" method="_on_Shot_Effect_Cooldown_timeout"]
